--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mockjs": "^1.0.1-beta3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "wqr-amap": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
